# HardiToolbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  HARDI_Toolbox.cbp  HARDI_Toolbox.depend  HARDI_Toolbox.layout  HardiToolbox.cpp  HardiToolbox.cpp~  HardiToolbox.h  HardiToolbox.h~  Makefile  README.md  RunMultiTensorTest  TestWeightEst  besselFunction.h  cmake_install.cmake  dwi-b1500-mask.roi  erf.h  main.cpp  main.cpp~  testMultiTensor.cpp  testMultiTensor.cpp~  testMultiTensor2.cpp  testMultiTensor2.cpp~  testProc.cpp  testProc.cpp~  testProc.h  testProc.h~  tomsalgorithm.txt  tomsalgorithmparams.txt  utils.cpp  utils.cpp~  utils.h  utils.h~
Matlab/: diffusion_directions.txt  getFiberDirections.m  getFiberDirections.m~  log.txt
Summary/: #summary.tex#  .#summary.tex  ref.bib  summary.aux  summary.tex  summary.tex~  summary_sparsity.aux  summary_sparsity.bbl  summary_sparsity.blg  summary_sparsity.tex  summary_sparsity.tex~
assets/: Gradient64.txt  Sphere1280.txt  Sphere2562.txt  test.txt
results/: dev.fig  dev_s0=700.fig  g=64__a=30__s=20__w=0.5_d.txt  g=64__a=30__s=20__w=0.5_w.txt  g=64__a=30__s=40__w=0.5_d.txt  g=64__a=30__s=40__w=0.5_w.txt  g=64__a=45__s=20__w=0.5_d.txt  g=64__a=45__s=20__w=0.5_w.txt  g=64__a=45__s=40__w=0.5_d.txt  g=64__a=45__s=40__w=0.5_w.txt  g=64__a=60__s=20__w=0.5_d.txt  g=64__a=60__s=20__w=0.5_w.txt  g=64__a=60__s=40__w=0.5_d.txt  g=64__a=60__s=40__w=0.5_w.txt  g=64__a=75__s=20__w=0.5_d.txt  g=64__a=75__s=20__w=0.5_w.txt  g=64__a=75__s=40__w=0.5_d.txt  g=64__a=75__s=40__w=0.5_w.txt  g=64__a=90__s=20__w=0.5_d.txt  (+36 more)
(+208 files in other folders)
